<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.mobvcviko1.viewmodels.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            style="@style/TextStyle"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toTopOf="@id/load_profile_btn"
            app:layout_constraintBottom_toBottomOf="@id/load_profile_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name"
            android:text="@{model.userResult.username}"
            style="@style/TextStyle"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/load_profile_btn"
            android:text="@string/nacitaj_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/location_label"
            android:text="@string/share_my_location"
            android:layout_margin="@dimen/activity_vertical_margin"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/location_switch"
            app:layout_constraintBottom_toBottomOf="@id/location_switch"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_margin="16dp"
            android:checked="@={model.sharingLocation}"
            android:id="@+id/location_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/upload_picture_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/upload_picture_button"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/uploaded_image"
            app:layout_constraintTop_toBottomOf="@+id/location_switch" />

        <Button
            android:id="@+id/delete_picture_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/delete_picture_button"
            app:layout_constraintEnd_toEndOf="@+id/upload_picture_btn"
            app:layout_constraintStart_toStartOf="@+id/upload_picture_btn"
            app:layout_constraintTop_toBottomOf="@+id/upload_picture_btn" />

        <ImageView
            android:id="@+id/uploaded_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            android:contentDescription="Uploaded image"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_label" />

        <com.mapbox.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_image">

        </com.mapbox.maps.MapView>
        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odhlasit_sa"
            app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/change_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
            app:layout_constraintStart_toStartOf="parent" />

    <com.example.mobvcviko1.widgets.bottomBar.BottomBar
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

